--- a/TCSOffice.Business.DataAccess/TCSOffice.Business.DataAccess.csproj
+++ b/TCSOffice.Business.DataAccess/TCSOffice.Business.DataAccess.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201805031943129_add customer table.Designer.cs">
       <DependentUpon>201805031943129_add customer table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805071847353_Add_customerId_ForeignKey.cs" />
+    <Compile Include="Migrations\201805071847353_Add_customerId_ForeignKey.Designer.cs">
+      <DependentUpon>201805071847353_Add_customerId_ForeignKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCSOfficeDbContext.cs" />
@@ -98,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805031943129_add customer table.resx">
       <DependentUpon>201805031943129_add customer table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805071847353_Add_customerId_ForeignKey.resx">
+      <DependentUpon>201805071847353_Add_customerId_ForeignKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
